cmake_minimum_required(VERSION 3.15)
project(study_space)

set(CMAKE_CXX_STANDARD 14)

add_executable(study_space com.ws/main.cpp)
add_executable(study_space_1 com.ws/HelloWorld.cpp)
add_executable(study_space_2 com.ws/DateTime.cpp)
add_executable(study_space_3 com.ws/Object.cpp)
add_executable(study_space_4 com.ws/Const.cpp)
add_executable(study_space_5 com.ws/Local.cpp)
add_executable(study_space_6 com.ws/Construct.cpp)
add_executable(study_space_7 com.ws/Init.cpp)
add_executable(study_space_8 com.ws/Static.cpp)
add_executable(study_space_9 com.ws/NullPoint.cpp)
add_executable(study_space_10 com.ws/ConstFunction.cpp)