cmake_minimum_required(VERSION 3.15)
project(study_space)

set(CMAKE_CXX_STANDARD 14)
#为了顺利编译socket
include_directories(D:\\mingw64\\include)

add_executable(study_space com.ws/main.cpp)
add_executable(study_space_1 com.ws/HelloWorld.cpp)
add_executable(study_space_2 com.ws/DateTime.cpp)
add_executable(study_space_3 com.ws/Object.cpp)
add_executable(study_space_4 com.ws/Const.cpp)
add_executable(study_space_5 com.ws/Local.cpp)
add_executable(study_space_6 com.ws/Construct.cpp)
add_executable(study_space_7 com.ws/Init.cpp)
add_executable(study_space_8 com.ws/Static.cpp)
add_executable(study_space_9 com.ws/NullPoint.cpp)
add_executable(study_space_10 com.ws/ConstFunction.cpp)
add_executable(study_space_11 com.ws/Friend.cpp)
add_executable(study_space_12 com.ws/FriendClass.cpp)
add_executable(study_space_13 com.ws/Extends.cpp)
add_executable(study_space_14 com.ws/VirtualFunction.cpp)
add_executable(study_space_15 com.ws/AbstracterClass.cpp)
add_executable(study_space_16 com.ws/IO.cpp)
add_executable(study_space_17 com.ws/Template.cpp)
add_executable(study_space_18 com.ws/TemplateClass.cpp)
add_executable(study_space_19 com.ws/Container.cpp)
add_executable(study_space_20 com.ws/StringUse.cpp)
#为了顺利编译socket
link_directories(D:\\mingw64\\lib)
link_libraries(ws2_32)
add_executable(study_space_21 com.ws/MySocket.cpp)
target_link_libraries(study_space_21 ws2_32)